# gestion-des-elections-municipales

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.in  validation.glade  validation.gladep
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  bureau.txt  callbacks.c  callbacks.h  election.c  election.h  election.txt  fonction.c  fonction.h  interface.c  interface.c.bak  interface.h  liste.txt  listelc.c  listelc.h  main.c  observateur.c  observateur.h  observateur.txt  reclamation.c  reclamation.h  reclamation.txt  stat.txt  user.c  user.h  user.txt  validation  vote.txt
src/.deps/: callbacks.Po  election.Po  fonction.Po  listelc.Po  observateur.Po  reclamation.Po
